--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "prettier": "^1.19.1"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "hbs": "^4.0.6"
   }
 }
